==> notrynohigh/BabyOS/bos/mcu/st/stm32g4xx/mcu_stm32g4xx_flash.c <==
#include <string.h>
#include "b_config.h"
#include "hal/inc/b_hal_flash.h"
#define FLASH_BASE_ADDR (0x8000000UL)
#define FLASH_PAGE_SIZE (2048)
#define FLASH_KEY_1 (0x45670123UL)
#define FLASH_KEY_2 (0xCDEF89ABUL)
#define FLASH_PER_TIMEOUT (0x000B0000UL)
#define FLASH_PG_TIMEOUT (0x00002000UL)
#define MCU_FLASH ((McuFlashReg_t *)0x40022000)

int bMcuFlashUnlock()
{
    int retval      = 0;
    MCU_FLASH->KEYR = FLASH_KEY_1;
    MCU_FLASH->KEYR = FLASH_KEY_2;
    return retval;
}

int bMcuFlashErase(uint32_t raddr, uint32_t pages)
{
    int      retval  = 0;
    int      timeout = 0;
    uint32_t i       = 0;
    uint32_t tmp;
    if (sMcuFlashSize == 0)
    {
        bMcuFlashInit();
    }
    raddr = raddr / FLASH_PAGE_SIZE * FLASH_PAGE_SIZE;
    if ((raddr + (pages * FLASH_PAGE_SIZE)) > (sMcuFlashSize) ||
        ((MCU_FLASH->SR) & (0x00001 << 16)) != 0)
    {
        return -1;
    }

    for (i = 0; i < pages; i++)
    {
        MCU_FLASH->SR = 0x83ff;
        tmp           = (MCU_FLASH->CR & ~(0x3f << 3));
        MCU_FLASH->CR = (tmp | ((raddr / FLASH_PAGE_SIZE) << 3) | (0x1 << 1) | (0x00001 << 16));

        timeout = FLASH_PER_TIMEOUT;
        while (((MCU_FLASH->SR) & (0x00001 << 16)) != 0 && timeout > 0)
        {
            timeout--;
        }
        MCU_FLASH->SR = 0x83ff;
        tmp           = MCU_FLASH->CR & ~(0x00000001 << 1);
        MCU_FLASH->CR = tmp;
        if (timeout <= 0)
        {
            retval = -2;
            break;
        }
        raddr += FLASH_PAGE_SIZE;
    }
    return retval;
}

int bMcuFlashWrite(uint32_t raddr, const uint8_t *pbuf, uint32_t len)
{
    int      timeout  = 0;
    uint32_t wdata[2] = {0, 0};
    uint32_t wlen = (len + 7) / 8, i = 0;
    uint32_t tmp;
    if (sMcuFlashSize == 0)
    {
        bMcuFlashInit();
    }
    raddr = FLASH_BASE_ADDR + raddr;
    if (pbuf == NULL || (raddr & 0x7) || (raddr + len) > (sMcuFlashSize + FLASH_BASE_ADDR) ||
        ((MCU_FLASH->SR) & (0x00001 << 16)) != 0)
    {
        return -1;
    }

    for (i = 0; i < wlen; i++)
    {
        wdata[1] = (wdata[1] << 8) | pbuf[i * 8 + 7];
        wdata[1] = (wdata[1] << 8) | pbuf[i * 8 + 6];
        wdata[1] = (wdata[1] << 8) | pbuf[i * 8 + 5];
        wdata[1] = (wdata[1] << 8) | pbuf[i * 8 + 4];

        wdata[0]                            = (wdata[0] << 8) | pbuf[i * 8 + 3];
        wdata[0]                            = (wdata[0] << 8) | pbuf[i * 8 + 2];
        wdata[0]                            = (wdata[0] << 8) | pbuf[i * 8 + 1];
        wdata[0]                            = (wdata[0] << 8) | pbuf[i * 8 + 0];
        MCU_FLASH->SR                       = 0x83ff;
        tmp                                 = MCU_FLASH->CR | (0x00000001 << 0);
        MCU_FLASH->CR                       = tmp;
        *((volatile uint32_t *)raddr)       = wdata[0];
        *((volatile uint32_t *)(raddr + 4)) = wdata[1];

        timeout = FLASH_PG_TIMEOUT;
        while (((MCU_FLASH->SR) & (0x00001 << 16)) != 0 && timeout > 0)
        {
            timeout--;
        }
        MCU_FLASH->SR = 0x83ff;
        tmp           = MCU_FLASH->CR & ~(0x00000001 << 0);
        MCU_FLASH->CR = tmp;
        if (timeout <= 0)
        {
            return -2;
        }
        raddr += 8;
    }
    return (wlen * 8);
}
