==> notrynohigh/BabyOS/bos/mcu/at/at32f413cx/mcu_at32f413xx_flash.c <==
#include <string.h>
#include "b_config.h"
#include "hal/inc/b_hal_flash.h"
#define UNUSED(x) (void)x /* to avoid gcc/g++ warnings */
#define __IO volatile     /*!< Defines 'read / write' permissions */
#define FLASH_BASE ((uint32_t)0x08000000)
#define FLASH_BASE_ADDR (0x8000000UL)
#define FLASH_SPIM_START_ADDR ((uint32_t)0x08400000) /*!< flash start address of spim */
#define SECTOR_SIZE 2048 /* this parameter depends on the specific model of the chip */
#define SECTOR_SIZE 1024 /* this parameter depends on the specific model of the chip */
#define FLASH_PAGE_SIZE SECTOR_SIZE
#define FLASH_MAX_SIZE (128 * 1024)
#define FLASH_UNLOCK_KEY1 ((uint32_t)0x45670123) /*!< flash operation unlock order key1 */
#define FLASH_UNLOCK_KEY2 ((uint32_t)0xCDEF89AB) /*!< flash operation unlock order key2 */
#define FAP_RELIEVE_KEY ((uint16_t)0x00A5)       /*!< flash fap relieve key val */
#define SLIB_UNLOCK_KEY ((uint32_t)0xA35F6D24)   /*!< flash slib operation unlock order key */
#define FLASH_ERR_INT ((uint32_t)0x00000001)      /*!< flash bank1 error interrupt */
#define FLASH_ODF_INT ((uint32_t)0x00000002)      /*!< flash bank1 operate done interrupt */
#define FLASH_SPIM_ERR_INT ((uint32_t)0x00000010) /*!< flash spim error interrupt */
#define FLASH_SPIM_ODF_INT ((uint32_t)0x00000020) /*!< flash spim operate done interrupt */
#define FLASH_OBF_FLAG ((uint32_t)0x00000001)     /*!< flash bank1 operate busy flag */

int bMcuFlashUnlock()
{
    int retval    = 0;
    FLASH->unlock = FLASH_UNLOCK_KEY1;
    FLASH->unlock = FLASH_UNLOCK_KEY2;
    return retval;
}

int bMcuFlashErase(uint32_t raddr, uint32_t pages)
{
    int               retval = 0;
    flash_status_type status = FLASH_OPERATE_DONE;

    raddr = FLASH_BASE_ADDR + raddr;

    if (raddr >= FLASH_SPIM_START_ADDR)
    {
        FLASH->ctrl3_bit.secers = TRUE;
        FLASH->addr3            = raddr;
        FLASH->ctrl3_bit.erstr  = TRUE;

        /* wait for operation to be completed */
        status = flash_spim_operation_wait_for(SPIM_ERASE_TIMEOUT);

        /* disable the secers bit */
        FLASH->ctrl3_bit.secers = FALSE;

        /* dummy read */
        flash_spim_dummy_read();
    }
    else
    {
        FLASH->ctrl_bit.secers = TRUE;
        FLASH->addr            = raddr;
        FLASH->ctrl_bit.erstr  = TRUE;

        /* wait for operation to be completed */
        status = flash_operation_wait_for(ERASE_TIMEOUT);

        /* disable the secers bit */
        FLASH->ctrl_bit.secers = FALSE;
    }

    if (status == FLASH_OPERATE_DONE)
    {
        retval = 0;
    }
    else
    {
        retval = -1;
    }

    return retval;
}

int bMcuFlashWrite(uint32_t raddr, const uint8_t *pbuf, uint32_t len)
{
    uint32_t          offset_addr;
    uint32_t          sector_position;
    uint16_t          sector_offset;
    uint16_t          sector_remain;
    uint16_t          i;
    flash_status_type status     = FLASH_OPERATE_DONE;
    uint32_t          write_addr = FLASH_BASE + raddr;
    uint16_t          num_write  = (len + 1) / 2;
    uint16_t         *p_buffer   = (uint16_t *)pbuf;

    flash_unlock();
    offset_addr     = raddr;
    sector_position = offset_addr / SECTOR_SIZE;
    sector_offset   = (offset_addr % SECTOR_SIZE) / 2;
    sector_remain   = SECTOR_SIZE / 2 - sector_offset;
    if (num_write <= sector_remain)
        sector_remain = num_write;
    while (1)
    {
        flash_read(sector_position * SECTOR_SIZE + FLASH_BASE, flash_buf, SECTOR_SIZE / 2);
        for (i = 0; i < sector_remain; i++)
        {
            if (flash_buf[sector_offset + i] != 0xFFFF)
                break;
        }
        if (i < sector_remain)
        {
            /* wait for operation to be completed */
            status = flash_operation_wait_for(ERASE_TIMEOUT);

            if ((status == FLASH_PROGRAM_ERROR) || (status == FLASH_EPP_ERROR))
                flash_flag_clear(FLASH_PRGMERR_FLAG | FLASH_EPPERR_FLAG);
            else if (status == FLASH_OPERATE_TIMEOUT)
                return -1;
            status = flash_sector_erase(sector_position * SECTOR_SIZE + FLASH_BASE);
            if (status != FLASH_OPERATE_DONE)
                return -2;
            for (i = 0; i < sector_remain; i++)
            {
                flash_buf[i + sector_offset] = p_buffer[i];
            }
            if (flash_write_nocheck(sector_position * SECTOR_SIZE + FLASH_BASE, flash_buf,
                                    SECTOR_SIZE / 2) != SUCCESS)
                return -3;
        }
        else
        {
            if (flash_write_nocheck(write_addr, p_buffer, sector_remain) != SUCCESS)
                return -4;
        }
        if (num_write == sector_remain)
            break;
        else
        {
            sector_position++;
            sector_offset = 0;
            p_buffer += sector_remain;
            write_addr += (sector_remain * 2);
            num_write -= sector_remain;
            if (num_write > (SECTOR_SIZE / 2))
                sector_remain = SECTOR_SIZE / 2;
            else
                sector_remain = num_write;
        }
    }
    flash_lock();
    return len;
}
